--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 
 <title>Danny's Recipe Page</title>
 
@@ -10,6 +10,7 @@
 
 <h1>Odin Recipes</h1>
     
+<a href = "recipes/lasagna.html"> Click for lasagna recipe </a>
 
 </body>
 
