Insert image, description, ingredients, and steps

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,43 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Lasagna Recipe </title>
+    <title> Garfields Lasagna Recipe </title>
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="https://media3.giphy.com/media/mnsrLVomCvdWaqF0oF/giphy.gif">
+    <strong><h3>Description</h3></strong>
+    <p>
+        This is the best recipe in the world. 
+        It has been used in 20 michelin star restaurants.
+    <p>It is better than your grandmas recipe.
+        It's better than your great grandmas recipe too.
+    </p>
 
+    </p>
+    <h4>Ingredients </h4>
+    <ul>
+        <li>1lb ground beef</li>
+        <li>Salt and Pepper</li>
+        <li>1 Basil Leaf</li>
+        <li>2 cups Mozzarella cheese</li>
+        <li>2 cups ricotta cheese</li>
+        <li>2 cups of cottage cheese</li>
+        <li>Hands, 2 preferably</li>
+        <li>Lasagna noodles</li>
+    </ul>
+    <h4>Instructions</h4>
+    <ol>
+        <li>Boil water</li>
+        <li>Put the noodle in the water</li>
+        <li>Wait for noodle</li>
+        <li>Put beef in pan</li>
+        <li>Cook it</li>
+        <li>Put everything in a baking thing</li>
+        <li>???</li>
+        <li>Profit</li>
+
+
+    </ol>
 </body>
 </html>
