Make deviled eggs page -link index page and devil egg page -format page

--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 <body>
 
 <h1>Odin Recipes</h1>
-    
-<a href = "recipes/lasagna.html"> Click for Lasagna Recipe </a>
+ <ol>
+<li><a href = "recipes/lasagna.html"> Click for Lasagna Recipe </a></li>
 <p>
-<a href = "recipes/ramen.html"> Click for Ramen Recipe</a>
+    <li><a href = "recipes/ramen.html"> Click for Ramen Recipe</a></li>
 </p>
-<p>
-
-    
-</p>
+<li><a href = "recipes/deviled-eggs.html"> Click for Deviled Eggs Recipe </a></li>
+</ol>
 </body>
 
 </html>
